--- a/devfile.yaml
+++ b/devfile.yaml
@@ -33,6 +33,34 @@ components:
     memoryLimit: 1024Mi
     mountSources: true
   name: runtime
+- name: outerloop-deploy
+  kubernetes:
+    inlined: |-
+      kind: Deployment
+      apiVersion: apps/v1
+      metadata:
+        name: my-nginx
+      spec:
+        replicas: 1
+        selector:
+          matchLabels:
+            app: my-nginx
+        template:
+          metadata:
+            labels:
+              app: my-nginx
+          spec:
+            containers:
+              - name: my-nginx
+                image: hello-world:latest
+                ports:
+                  - name: http
+                    containerPort: 8080
+                    protocol: TCP
+                resources:
+                  limits:
+                    memory: "1024Mi"
+                    cpu: "500m"
 metadata:
   description: Go is an open source programming language that makes it easy to build
     simple, reliable, and efficient software.
